Điều chỉnh Đặt vé, Thanh toán, EmailService